--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -156,7 +156,7 @@
                                 {{!-- projects/{{this.project_name}} --}}
                                 <a style="color: black;" onMouseOver="this.style.color='#0087ca'"
                                 onMouseOut="this.style.color='#000000'" class="card-title nav-link"
-                                        href="/projects/{{project_id}}"><b>{{project_name}}</b>
+                                        href="/formulas/{{project_id}}"><b>{{project_name}}</b>
                                 <h6 style="color: black; ">Client: {{client}}</h6>
                                 <h6 style="color: black;">{{formatDate date}}</h6>
                                 <div class="col s12">&nbsp;</div>
